# mongoeco

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  COMPATIBILITY.md  DESIGN.md  DIALECTS.md  FOLLOWUPS.md  LICENSE  MANIFEST.in  MEJORAS.md  MISSING_FEATURES.md  README.md  TODO.md  checklist.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: README.md  __init__.py  report.py  requirements.txt  run.py
benchmarks/data/: __init__.py  generator.py
benchmarks/engines/: __init__.py  base.py  mongoeco_async.py  mongoeco_mem.py  mongoeco_sql.py  mongomock_adapter.py
benchmarks/reports/: latest-500.md  search-vector-extreme-2026-04-04.md  size500-history.md
benchmarks/runners/: __init__.py  metrics.py  workloads.py
docs/: comparisons.md  cxp.md  release-3.2.0-draft.md  release-3.3.0-draft.md  release-3.4.0-draft.md  release-checklist.md  use-cases.md
docs/architecture/: api-surfaces.md  change-streams-and-collation.md  core-runtime.md  driver-and-wire.md  index.md  storage-engines.md  system-overview.md  testing-and-compatibility.md
docs/architecture/decisions/: ADR-001-async-first-y-sync-adaptador.md  ADR-002-dialecto-y-perfil-como-ejes-distintos.md  ADR-003-planning-mode-y-degradacion-explicita.md  ADR-004-engines-con-protocolos-delgados.md  ADR-005-sqlite-modular-y-memory-como-baseline.md  ADR-006-change-streams-locales-y-persistencia-opcional.md  ADR-007-sdam-parcial-y-explicito.md  ADR-008-pyicu-opcional-y-pyuca-como-fallback.md  ADR-009-parity-tests-como-politica-de-aceptacion.md  index.md
docs/use-cases/: embedded-app.md  local-search-and-retrieval.md  test-runtime.md
examples/: README.md  _demo_support.py  cxp_adapter.py  memory_quickstart.py  search_and_vector_local.py  sqlite_embedded_app.py  test_runtime_local.py  vector_search_diagnostics.py
mongoeco/: __init__.py
scripts/: build_mongomock_matrix.py  capture_differential_replay_golden.py  export_compat_catalog.py  inventory_mongomock_suite.py  run_mongodb7_differential.py  run_mongodb8_differential.py  run_mongodb_real_differential.py  run_pymongo_profile_matrix.py  smoke_installed_wheel.py  smoke_pypi_contract.py  update_compat_snapshots.py
src/mongoeco/: __init__.py  _version.py  change_streams.py  error_catalog.py  errors.py  session.py  types.py
src/mongoeco/_change_streams/: cursor.py  hub.py  journal.py  models.py  pipeline.py
src/mongoeco/_types/: __init__.py  _bson_objectid.py  _bson_values.py  aliases.py  bson.py  concerns.py  documents.py  indexes.py  writes.py
src/mongoeco/api/: __init__.py  admin_parsing.py  argument_validation.py  operations.py  public_api.py
src/mongoeco/compat/: __init__.py  _catalog_constants.py  _catalog_data.py  _catalog_database_commands.py  _catalog_dialects.py  _catalog_export.py  _catalog_models.py  _catalog_operation_options.py  _catalog_operators.py  _catalog_profiles.py  _catalog_runtime_subsets.py  base.py  catalog.py  operation_support.py  registry.py
src/mongoeco/core/: _filtering_matching.py  _filtering_specials.py  _filtering_support.py  _search_contract.py  aggregation.py  bson_ordering.py  bson_scalars.py  codec.py  collation.py  compiled_query.py  filtering.py  geo.py  identity.py  json_compat.py  operation_limits.py  operators.py  paths.py  projections.py  query_plan.py  schema_validation.py  search.py  search_filter_prefilter.py  sorting.py  sql_translation.py  update_array_operators.py  update_paths.py  update_scalar_operators.py  upserts.py  validation.py
src/mongoeco/cxp/: __init__.py  (+8 more)
tests/: conftest.py  support.py
tests/differential/: _real_parity_base.py  cases.py  mongodb7_real_parity.py  mongodb8_real_parity.py  runner.py
tests/fixtures/: compat_catalog_snapshot.json  compat_catalog_snapshot.md  differential_replay_golden.json  mongomock_suite_inventory.json  mongomock_suite_matrix.json  mongomock_suite_rules.json  pymongo_profile_matrix.json
tests/unit/: test_admin_parsing.py  test_architecture.py  test_architecture_admin_surface.py  test_architecture_engine_operations.py  test_architecture_types_metadata.py  test_change_streams.py  test_compat.py  test_compat_contract.py  test_cxp_adapter.py  test_cxp_driver_telemetry.py  test_cxp_smoke_coverage.py  test_database_admin.py  test_database_admin_namespace.py  test_database_command_annotations.py  test_database_commands.py  test_differential.py  test_differential_replay.py  test_driver_architecture.py  test_driver_coverage.py  test_driver_uri.py  test_error_catalog.py  test_misc_coverage.py  test_module_imports.py  test_mongomock_inventory_script.py  test_mongomock_matrix_script.py  test_optional_bson_imports.py  test_package_init.py  test_public_exports.py  test_raw_batch_cursors.py  test_small_public_shims.py  test_smoke_installed_wheel.py  test_topology_monitor.py  test_transports.py
(+226 files in other folders)
