[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mongoeco"
dynamic = ["version"]
description = "Async-first MongoDB-like persistence library with pluggable storage engines."
readme = {file = "README.md", content-type = "text/markdown"}
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{name = "Vicente Ruiz"}]
requires-python = ">=3.13"
dependencies = [
    "cxp>=3.0.0",
    "pyuca>=1.2,<2",
    "shapely>=2.1,<3",
    "usearch>=2.23,<3",
]
keywords = [
    "mongodb",
    "pymongo",
    "testing",
    "sqlite",
    "embedded-database",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
    "Topic :: Software Development :: Testing",
]

[project.optional-dependencies]
dev = [
    "build",
    "coverage",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ruff",
    "twine",
]
mongodb7 = [
    "pymongo>=4.9,<5",
]
mongodb8 = [
    "pymongo>=4.9,<5",
]
mongodb-real = [
    "pymongo>=4.9,<5",
]
wire = [
    "pymongo>=4.9,<5",
]
json-fast = [
    "orjson>=3.11,<4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "mongoeco._version.__version__"}


[tool.ruff]
# Exclude directories.
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".vscode",
    "build",
    "dist",
    "site-packages",
    "env",
]
respect-gitignore = true

line-length = 79
indent-width = 4
target-version = "py313"
src = ["src", "tests"]


[tool.ruff.lint]

select = [
    "E",     # pycodestyle
    "D",     # pydocstyle
    "F",     # Pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "PL",    # pylint
    "UP",    # pyupgrade
    "A",     # flake8-builtins
    "ASYNC", # flake8-async
    "S",     # flake8-bandit
    "FBT",   # flake8-boolean-trap
    "B",     # flake8-bugbear
    "A",     # flake8-builtins
    "COM",   # flake8-commas
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "T10",   # flake8-debugger
    "EM",    # flake8-errmsg
    "FA",    # flake8-future-annotations
    "ISC",   # flake8-implicit-str-concat
    "ICN",   # flake8-import-conventions
    "PIE",   # flake8-pie
    "T20",   # flake8-print
    "PYI",   # flake8-pyi
    "PT",    # flake8-pytest-style
    "RSE",   # flake8-raise
    "RET",   # flake8-return
    "SLOT",  # flake8-slots
    "SIM",   # flake8-simplify
    "TC",    # flake8-type-checking
    "INT",   # flake8-gettext
    "PTH",   # flake8-use-pathlib
    "PERF",  # Perflint
    "FURB",  # refurb
    "RUF",   # Ruff specific
]
ignore = [
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method
    "D107",  # Missing docstring in `__init__`

    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public method
    "D103",  # Missing docstring in public function
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.ruff.lint.flake8-pytest-style]
parametrize-names-type = "list"        # @pytest.mark.parametrize(['name1', 'name2'], ...)
parametrize-values-row-type = "tuple"  # @pytest.mark.parametrize(['name1', 'name2'], [(1, 2), (3, 4)])
parametrize-values-type = "list"       # @pytest.mark.parametrize('name', [1, 2, 3])


[tool.ruff.lint.pydocstyle]
convention = "google"
ignore-decorators = ["typing.overload"]


[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
combine-as-imports = true
lines-between-types = 1
lines-after-imports = 2
forced-separate = ["tests"]
force-sort-within-sections = false


[tool.ruff.format]
quote-style = "single"
indent-style = "space"

# Respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"
